<resources>
    <string name="app_name">Teboho</string>
    <string name="text_view">Hello World</string>
    <string name="find_menu_button">SELECT</string>
    <string name="menu_content">Content</string>
    <string name="add_creditor_button">ADD</string>
    <string name="add_debitor_button">ADD</string>
    <string name="text_personName_debitor">Name</string>
    <string name="added_debitor_name">Client Name</string>
    <string name="adding_debitor_button">ADD</string>
    <string name="added_debitor_surname">Client Surname</string>
    <string name="added_debitor_amount">Debited Amount</string>
    <string name="admin_username">Username</string>
    <string name="admin_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_attempts">No. of remaining attempts</string>
    <string name="credited_amount">Credited Amount</string>
    <string name="subtract_creditor">Subtract</string>
    <string name="label_addCreditorDebitor">Client List</string>
    <string name="delete_client_button">Delete</string>
    <string name="delete_all_title">delete all</string>
    <string name="button_add_debitor_existing">ADD</string>
    <string name="debited_amount_existing">additional debit</string>
    <string name="investement_withdrawal">Investement/Withdrawal</string>
    <string name="investment">INVESTMENT</string>
    <string name="withdrawal">WITHDRAWAL</string>
    <string name="available_balance_string">AVAILABLE BALANCE</string>
    <string name="balance_value">balance value</string>
    <string name="todo_dollar">TODO</string>
    <string name="debited_amount_string">VARIABLE DEBITED AMOUNT</string>
    <string name="balance_value_debited_string">balance value</string>
    <string name="todo_debited_imageView">TODO</string>
    <string name="invested_amount_string">INVESTED AMOUNT</string>
    <string name="balance_value_string">balance value</string>
    <string name="todo_invested_imageView">TODO</string>
    <string name="withdrawn_amount_string">WITHDRAWN AMOUNT</string>
    <string name="transaction_reason">Transaction Reason </string>
    <string name="profit_image_view" />
    <string name="profit_value">profit value</string>
    <string name="profit_percentage">profit percentage</string>
    <string name="total_business_profit">TOTAL BUSINESS PROFIT</string>

    <string-array name="contents">
        <item>Add Creditor</item>
        <item>Add Debitor</item>
        <item>Add Investment/Withdrawal</item>
        <item>Check Debitors List</item>
        <item>Check Client Details</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_settings">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="apply_interest">Apply interest</string>
    <string name="apply_interest_on_missed_payments">Apply interest on missed payments</string>
    <string name="issuable_amount">Issuable Amount</string>
    <string name="issuable_amount_value">R200</string>
    <string name="change_login_requirements">Change Login Requirements</string>
    <string name="transction_date">8 Jan 2021</string>
    <string name="forget_password">Forget Password?</string>
    <string name="house_address">House Address</string>
    <string name="register_client_details">Register Client Details</string>
    <string name="id_no_e_g_1997_09_23">ID No.: e.g 1997/09/23</string>
    <string name="contact_number">Contact Number</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="is_client_is_a_female">Is client is a female?</string>
    <string name="is_client_employed">Is client employed?</string>

</resources>