<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddInvestmentWithdrawal">

    <Button
        android:id="@+id/InvestmentAddButton"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:text="@string/investment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toEndOf="@+id/WithdrawalAddButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextTransactionReason"
        app:layout_constraintVertical_bias="0.331"
        android:background="@drawable/button"/>

    <EditText
        android:id="@+id/InvestedOrWithdrawalAmount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="168dp"
        android:background="@drawable/edit"
        android:drawableStart="@drawable/ic_money"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"

        android:hint="@string/investement_withdrawal"
        android:inputType="numberDecimal"
        android:padding="20dp"
        android:textColorHint="#395ec6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/WithdrawalAddButton"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:text="@string/withdrawal"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/InvestmentAddButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/InvestmentAddButton"
        android:background="@drawable/button"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="#395ec6"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_comment"


        android:id="@+id/editTextTransactionReason"
        android:hint="@string/transaction_reason"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InvestedOrWithdrawalAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>