<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClientPersonalDetails">

    <Switch
        android:id="@+id/switchPersonalGender"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/is_client_is_a_female"
        android:textColor="#395ec6"
        app:layout_constraintEnd_toEndOf="@+id/switchPersonalEmployment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/switchPersonalEmployment"
        app:layout_constraintTop_toBottomOf="@+id/switchPersonalEmployment" />

    <EditText
        android:id="@+id/personalClientName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/added_debitor_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColorHint="#395ec6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:drawableStart="@drawable/ic_person"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/personalClientSurname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/added_debitor_surname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColorHint="#395ec6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/personalClientName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/personalClientName"
        app:layout_constraintTop_toBottomOf="@+id/personalClientName"
        app:layout_constraintVertical_bias="0.05"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_person" />

    <EditText
        android:id="@+id/personalContact"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_phone"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:textColorHint="#395ec6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/personalClientSurname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/personalClientSurname"
        app:layout_constraintTop_toBottomOf="@+id/personalClientSurname"
        app:layout_constraintVertical_bias="0.089"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_phone" />

    <EditText
        android:id="@+id/personalIdentityNo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_identity"
        android:drawablePadding="10dp"
        android:hint="@string/id_no_e_g_1997_09_23"
        android:inputType="text"
        android:padding="15dp"
        android:textColorHint="#395ec6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/personalContact"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/personalContact"
        app:layout_constraintTop_toBottomOf="@+id/personalContact"
        app:layout_constraintVertical_bias="0.098"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_identity" />

    <EditText
        android:id="@+id/personalIncome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_money"
        android:hint="@string/monthly_income"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:textColorHint="#395ec6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/personalPostalAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/personalPostalAddress"
        app:layout_constraintTop_toBottomOf="@+id/personalPostalAddress"
        app:layout_constraintVertical_bias="0.089"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_money" />

    <EditText
        android:id="@+id/personalPostalAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_home"
        android:hint="@string/house_address"
        android:inputType="textPostalAddress"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:textColorHint="#395ec6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/personalIdentityNo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/personalIdentityNo"
        app:layout_constraintTop_toBottomOf="@+id/personalIdentityNo"
        app:layout_constraintVertical_bias="0.089"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_home" />


    <Switch
        android:id="@+id/switchPersonalEmployment"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/is_client_employed"
        android:textColor="#395ec6"
        app:layout_constraintEnd_toEndOf="@+id/personalIncome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/personalIncome"
        app:layout_constraintTop_toBottomOf="@+id/personalIncome" />

    <Button
        android:id="@+id/buttonPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register_client_details"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="@+id/switchPersonalGender"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/switchPersonalGender"
        app:layout_constraintTop_toBottomOf="@+id/switchPersonalGender" />


</androidx.constraintlayout.widget.ConstraintLayout>
